# fastframe

./: LICENSE  README.md  playground.py  pyproject.toml
fastframe/: main.py
fastframe/templates/project/: main.py
fastframe/templates/project/endpoints/: main.py
